# php-rs

./: Cargo.toml  README.md
.github/workflows/: cargo-tests.yml  deploy-wasm.yml  rust.yml
codegen/: Cargo.toml
codegen/src/: builder.rs  expression.rs  identifier.rs  lib.rs  statement.rs  symbol_table.rs
codegen/tests/: symbol_table_tests.rs
compiler/: Cargo.toml
compiler/src/: codegen.rs  jit.rs  lib.rs  symbol_table.rs
compiler/src/codegen/: builder.rs  expression.rs  identifier.rs  infix.rs  literal.rs  mod.rs  statement.rs
compiler/tests/: compiler_tests.rs  jit_tests.rs  symbol_table_tests.rs
evaluator/: Cargo.toml
evaluator/src/: lib.rs
evaluator/tests/: evaluator_tests.rs
interpreter/: Cargo.toml
interpreter/src/: main.rs  repl.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
lexer/tests/: lexer_tests.rs
llvm/: Cargo.toml
llvm/src/: lib.rs
object/: Cargo.toml
object/src/: builtins.rs  lib.rs
opcode/: Cargo.toml
opcode/src/: lib.rs
opcode/tests/: opcode_tests.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs
parser/tests/: parser_tests.rs
source/: Cargo.toml
source/src/: lib.rs
src/: ast.rs  evaluator.rs  lexer.rs  main.rs  object.rs  parser.rs  repl.rs  string.rs  token.rs
src/object/: environment.rs  mod.rs
token/: Cargo.toml
token/src/: lib.rs
vm/: Cargo.toml
vm/src/: frame.rs  lib.rs
vm/tests/: vm_tests.rs
wasm/: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
wasm/js/: index.js
wasm/src/: lib.rs
wasm/static/: index.html
