[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
lazy_static = "1.4.0"
lexer = { path = "../lexer" }
log = "0.4.20"
object = { path = "../object" }
opcode = { path = "../opcode" }
parser = { path = "../parser" }
