[package]
name = "llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
token = { path = "../token" }