[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
compiler = { path = "../compiler" }
env_logger = "0.10.0"
lexer = { path = "../lexer" }
object = { path = "../object" }
opcode = { path = "../opcode" }
parser = { path = "../parser" }
log = "0.4.20"
byteorder = "1.5.0"
